--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <html>
+<head>
 <body>
 
-Email: <?php echo $_POST["email"]; ?><br>
-Phone Number: <?php echo $_POST["phone"]; ?>
-Date of Birth: <?php echo $_POST["dob"]; ?>
+<form autocomplete="on">
+  <label for="email">Email Address:</label><br>
+  <input type="email" id="email" name="email" placeholder="xxxx@xxxx.com" required><br>
+  <label for="phone">Phone Number:</label><br>
+  <input type="tel" id="phone" name="phone" placeholder="xxx-xxx-xxxx" required><br>
+  <label for="dob">Date of Birth:</label><br>
+  <input type="date" id="dob" name="dob" required><br>
+  <input type="submit" value="Submit">
+</form>
 
+
+</head>
 </body>
 </html>
