--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
 <head>
+  <title>Second Lab:</title>
+    <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+<link rel="stylesheet" media="screen" href="css/meyer-reset.css" />
+<link rel="stylesheet" media="screen" href="css/style.css" />
+</head>
 <body>
-
 <form autocomplete="on">
   <label for="email">Email Address:</label><br>
   <input type="email" id="email" name="email" placeholder="xxxx@xxxx.com" required><br>
@@ -13,6 +18,5 @@
 </form>
 
 
-</head>
 </body>
 </html>
