--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
 <link rel="stylesheet" media="screen" href="css/style.css" />
 </head>
 <body>
-<form autocomplete="on">
-  <label for="email">Email Address:</label><br>
-  <input type="email" id="email" name="email" placeholder="xxxx@xxxx.com" required><br>
-  <label for="phone">Phone Number:</label><br>
-  <input type="tel" id="phone" name="phone" placeholder="xxx-xxx-xxxx" required><br>
-  <label for="dob">Date of Birth:</label><br>
-  <input type="date" id="dob" name="dob" required><br>
-  <input type="submit" value="Submit">
-</form>
-
+  <div class="box">
+    <form autocomplete="on">
+      <label for="email">Email Address:</label><br>
+      <input type="email" id="email" name="email" placeholder="xxxx@xxxx.com" required><br>
+      <label for="phone">Phone Number:</label><br>
+      <input type="tel" id="phone" name="phone" placeholder="xxx-xxx-xxxx" required><br>
+      <label for="dob">Date of Birth:</label><br>
+      <input type="date" id="dob" name="dob" required><br>
+      <input type="submit" value="Submit">
+    </form>
+  </div>
 
 </body>
 </html>
