--- a/index.html
+++ b/index.html
@@ -10,13 +10,21 @@
 <body>
   <div class="box">
     <form autocomplete="on">
-      <label for="email">Email Address:</label><br>
-      <input type="email" id="email" name="email" placeholder="xxxx@xxxx.com" required><br>
-      <label for="phone">Phone Number:</label><br>
-      <input type="tel" id="phone" name="phone" placeholder="xxx-xxx-xxxx" required><br>
-      <label for="dob">Date of Birth:</label><br>
-      <input type="date" id="dob" name="dob" required><br>
-      <input type="submit" value="Submit">
+      <section>
+        <label for="email">Email Address:</label>
+        <input type="email" id="email" name="email" placeholder="xxxx@xxxx.com" required>
+      </section>
+      <section>
+        <label for="phone">Phone Number:</label>
+        <input type="tel" id="phone" name="phone" placeholder="xxx-xxx-xxxx" required>
+      </section>
+      <section>
+        <label for="dob">Date of Birth:</label>
+        <input type="date" id="dob" name="dob" required>
+      </section>
+      <section>
+        <input type="submit" value="Submit">
+      </section>
     </form>
   </div>
 
