--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
       <div class="box">
-          <form autocomplete="on">
+          <form autocomplete="on" method="get" and action="#null">
               <section>
                   <label for="email">Email Address:</label>
                   <input type="email" id="email" name="email" placeholder="xxxx@xxxx.com" required>
