replaced <section> tags with <div>

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 <body>
       <div class="box">
           <form autocomplete="on" method="get" action="#null">
-              <section>
+              <div>
                   <label for="email">Email Address:</label>
                   <input type="email" id="email" name="email" placeholder="xxxx@xxxx.com" required>
-              </section>
-              <section>
+              </div>
+              <div>
                   <label for="phone">Phone Number:</label>
                   <input type="tel" id="phone" name="phone" placeholder="xxx-xxx-xxxx" required>
-              </section>
-              <section>
+              </div>
+              <div>
                   <label for="dob">Date of Birth:</label>
                   <input type="date" id="dob" name="dob" required>
-              </section>
-              <section>
+              </div>
+              <div>
                   <input type="submit" value="Submit">
-                </section>
+              </div>
           </form>
         </div>
 
